# Entropia

./: .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev-auth.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_app_metadata.py  0002_stage1_foundation.py  0003_market_data.py  0004_research_data.py  0005_esp_packages.py  0006_rationale_families.py  0007_create_package_precheck.py  0008_mainboard_composition.py  0009_strategy_details.py  0010_trading_signal.py  0011_trade_log.py  0012_portfolio_allocation.py  0013_ready_check.py  0014_backtest_run_result.py  0015_arrange_metrics_export.py  0016_analysis_lab.py  0017_agent_tool_gateway.py  0018_trash_page.py  0019_user_manual.py  0020_future_dev.py  0021_local_auth.py  0022_audit_log_indexes.py  0023_audit_log_trgm_indexes.py  0024_strategy_draft_provenance.py  0025_package_validation_run.py  0026_package_baseline_asset.py  0027_instrument_registry.py  0028_resource_share.py  0029_esp_validation_run.py  0030_precheck_source_warnings.py  0031_package_import_job.py  0032_reauth_proof.py  0033_stop_dependency_role.py  0034_package_implementation.py  0035_portfolio_rules.py
backend/src/entropia/: __init__.py
backend/src/entropia/application/: idempotency.py  identity.py
backend/src/entropia/application/commands/: __init__.py  agent_control.py  agent_coordinator.py  agent_loop.py  allocation_plan.py  auth.py  backtest_run.py  capability.py  create_package.py  data_queue.py  deletion.py  entities.py  esp.py  instrument.py  lab_message.py  mainboard.py  manual.py  market_data.py  metric_profile.py  package_import.py  package_lifecycle.py  rationale.py  readiness_check.py  research_data.py  result_export.py  role_assignment.py  roles.py  sharing.py  strategy_draft.py  trade_log.py  trading_signal.py
backend/src/entropia/application/jobs/: __init__.py  agent_executor.py  agent_tools.py  backtest_engine.py  data_queue.py  maintenance.py  market_data.py  outbox_relay.py  package_import.py  package_validation.py  purge.py  research_data.py  trade_log.py  trading_signal.py
backend/src/entropia/application/queries/: __init__.py  agent_tool_gateway.py  agent_workspace.py  allocation_currency.py  allocation_plan.py  audit_log.py  backtest_run.py  capability.py  create_package.py  esp.py  funding.py  indicator_plan.py  instrument.py  library.py  log_projection.py  mainboard.py  manual.py  market_bars.py  market_data.py  market_ticks.py  metric_profile.py  package_import.py  panel_backtest_log.py  rationale.py  readiness_check.py  research_data.py  result_artifacts.py  results_history.py  sharing.py  strategy.py  trade_log.py  trading_signal.py  trash.py  user_registry.py
backend/src/entropia/apps/: retire_dev_admin.py  seed.py
backend/src/entropia/config/: __init__.py  settings.py
backend/src/entropia/domain/: __init__.py
backend/src/entropia/shared/: concurrency.py  errors.py  idempotency.py  ids.py  manifest.py  pagination.py  passwords.py  responses.py
backend/tests/: conftest.py
backend/tests/contract/: test_auth_mode_contract.py  test_auth_mode_login_gate.py  test_create_package_contract.py  test_esp_contract.py  test_hardening_contract.py  test_health_contract.py  test_identity_and_gating.py  test_library_contract.py  test_mainboard_contract.py  test_manual_contract.py  test_market_data_contract.py  test_openapi_contract.py  test_rationale_contract.py  test_research_data_contract.py  test_sse_auth_contract.py  test_strategy_save_contract.py  test_trade_log_contract.py  test_trading_signal_contract.py
backend/tests/integration/: conftest.py  db.py  test_agent_coordinator_loop.py  test_agent_executor.py  test_agent_tool_call_history.py  test_agent_tool_gateway.py  test_allocation_fx_dependency.py  test_allocation_persistence.py  test_analysis_lab.py  test_arrange_metrics.py  test_audit_log_indexes.py  test_audit_log_trgm_indexes.py  test_auth.py  test_auth_bootstrap_admin.py  test_auth_mode_transport.py  test_backtest_persistence.py  test_backtest_tick_execution.py  test_baseline_evidence.py  test_bootstrap_status.py  test_capability_output_history.py  test_capability_transition_history.py  test_column_mapping.py  test_condition_plan_resolution.py  test_create_package_persistence.py  test_data_queue_redelivery.py  test_derive_strategy_draft.py  test_e2e_agent_loop.py  test_e2e_pipeline.py  test_esp_persistence.py  test_funding_resolution.py  test_future_dev.py  test_gateway_parity.py  test_gateway_parity_s4.py  test_hardening.py  test_indicator_plan_resolution.py  test_instrument_registry.py  test_instrument_registry_wiring.py  test_lab_conversation.py  test_legacy_admin_upgrade.py  test_legacy_upgrade.py  (+40 more)
backend/tests/unit/: engine_signal_plan.py  test_admin_panel_taxonomy.py  test_allocation_rules.py  test_arrange_metrics.py  test_auth_bootstrap_unit.py  test_auth_unit.py  test_backtest_condition_extensions.py  test_backtest_conditions.py  test_backtest_decision_trace.py  test_backtest_engine.py  test_backtest_engine_allocation.py  test_backtest_engine_condition_gating.py  test_backtest_engine_indicator_plan.py  test_backtest_funding.py  test_backtest_indicator_vs_indicator.py  test_backtest_indicators.py  test_backtest_intrabar_execution.py  test_backtest_leverage_trailing.py  test_backtest_limit_orders.py  test_backtest_logic_stop.py  test_backtest_multi_timeframe.py  test_backtest_nary_reference.py  test_backtest_partial_close.py  test_backtest_per_condition_timeframe.py  test_backtest_portfolio_rules.py  test_backtest_restrictions.py  test_backtest_scaling.py  test_backtest_signal_strength.py  test_backtest_stop_orders.py  test_backtest_tick_data.py  test_backtest_tick_settings.py  test_backtest_vwap.py  test_baseline.py  test_bootstrap_status_unit.py  test_candidate_generation.py  test_candidate_generator.py  test_column_mapping.py  test_concurrency.py  test_create_package_policy.py  test_create_package_state_machine.py  (+49 more)
(+562 files in other folders)
