[project]
name = "entropia"
version = "0.1.0"
description = "Entropia V18 — quantitative trading strategy & backtest platform (backend)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }

dependencies = [
  # --- HTTP application layer ---
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.51.0,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "sse-starlette>=3.4.5,<4.0",
  "python-multipart>=0.0.12",
  # --- Persistence (PostgreSQL 16) ---
  "sqlalchemy[asyncio]>=2.0.35,<3.0",
  "asyncpg>=0.30,<0.31",
  "alembic>=1.13,<2.0",
  "greenlet>=3.1",
  # --- Queue / workers (Redis 7 + Dramatiq) ---
  "redis>=5.1,<6.0",
  "dramatiq[redis]>=2.2.0,<3.0",
  # --- Object storage (S3 / MinIO) ---
  "boto3>=1.35,<2.0",
  # --- Columnar data toolchain ---
  "polars>=1.9,<2.0",
  "pyarrow>=17.0",
  # --- Observability ---
  "structlog>=24.4",
  # --- Authentication (M1 / Master §20: local auth, argon2id password hashes) ---
  "argon2-cffi>=23.1,<26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-cov>=5.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.7,<1.0",
  "mypy>=1.11,<2.0",
  "boto3-stubs[s3]>=1.35",
  "openapi-spec-validator>=0.7,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/entropia"]

# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM", "RUF"]
ignore = ["B008", "UP046", "UP047"]  # FastAPI Depends defaults; keep Generic[T] for Pydantic v2.

[tool.ruff.lint.isort]
known-first-party = ["entropia"]

# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_decorators = false
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["dramatiq.*", "boto3.*", "botocore.*", "pyarrow.*"]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q --cov=entropia --cov-report=term-missing"
markers = [
  "integration: requires postgres/redis/minio",
  "contract: API request/response/SSE schema tests",
  "deterministic: pinned-manifest backtest replay tests",
  "acceptance: end-to-end workflow tests",
]
