[project]
name = "entropia"
version = "0.1.0"
description = "Entropia V18 — quantitative trading strategy & backtest platform (backend)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }

dependencies = [
  # --- HTTP application layer ---
  "fastapi>=0.139.2,<1.0",
  "uvicorn[standard]>=0.51.0,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "sse-starlette>=3.4.6,<4.0",
  "python-multipart>=0.0.12",
  # --- Persistence (PostgreSQL 16) ---
  "sqlalchemy[asyncio]>=2.0.51,<3.0",
  "asyncpg>=0.31.0,<0.32",
  "alembic>=1.13,<2.0",
  "greenlet>=3.1",
  # --- Queue / workers (Redis 7 + Dramatiq) ---
  "redis>=8.0.1,<9.0",
  "dramatiq[redis]>=2.2.0,<3.0",
  # --- Object storage (S3 / MinIO) ---
  "boto3>=1.43.53,<2.0",
  # --- Columnar data toolchain ---
  "polars>=1.43.0,<2.0",
  "pyarrow>=17.0",
  # --- Observability ---
  "structlog>=24.4",
  # --- Authentication (M1 / Master §20: local auth, argon2id password hashes) ---
  "argon2-cffi>=23.1,<26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1,<10.0",
  "pytest-asyncio>=1.4.0,<2.0",
  "pytest-cov>=5.0",
  "httpx>=0.27,<1.0",
  "boto3-stubs[s3]>=1.43.53",
  "openapi-spec-validator>=0.7,<1.0",
  # ruff 0.15.21's Linux x86_64 wheel ships no `ruff` binary, so `uv run ruff`
  # fails with "Failed to spawn: ruff" in CI (the macOS wheel is fine, which is
  # why it passed locally). Pin to the last good release until a fixed one lands.
  "ruff>=0.15.22,<0.15.23",
  "mypy>=1.11,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/entropia"]

# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM", "RUF"]
ignore = ["B008", "UP046", "UP047"]  # FastAPI Depends defaults; keep Generic[T] for Pydantic v2.

[tool.ruff.lint.isort]
known-first-party = ["entropia"]

# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_decorators = false
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["dramatiq.*", "boto3.*", "botocore.*", "pyarrow.*"]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q --cov=entropia --cov-report=term-missing"
markers = [
  "integration: requires postgres/redis/minio",
  "contract: API request/response/SSE schema tests",
  "deterministic: pinned-manifest backtest replay tests",
  "acceptance: end-to-end workflow tests",
]
